# bg-gen

./: .gitignore  CMakeLists.txt
ext/glad/: CMakeLists.txt
ext/glad/include/glad/: gl.h
shaders/: background.fragment.glsl  background.vertex.glsl
src/: main.c
