CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
PROJECT(bg-gen)

ADD_EXECUTABLE(bg-gen src/main.c)

TARGET_INCLUDE_DIRECTORIES(bg-gen PUBLIC "ext/stb/include/")
IF(NOT WIN32)
  TARGET_LINK_LIBRARIES(bg-gen m)
ENDIF()

ADD_SUBDIRECTORY("ext/glad")
TARGET_LINK_LIBRARIES(bg-gen glad)

ADD_SUBDIRECTORY("ext/glfw")
TARGET_LINK_LIBRARIES(bg-gen glfw)
